fix(search): Deckel begrenzt die Arbeit, Strukturtest statt Prompt-Marker, Auflistungsweg und kurze Alarmfrist
Review-Befunde zu PR #1746:

- Der Abruf materialisiert kein ganzes Dokument mehr. Der Vorgabepfad liest
  über ChunkInspectionService#listChunkWindow genau das Indexfenster, das er
  zurückgibt; full=true liest seitenweise (listChunkPage) und bricht ab,
  sobald der Zeichen-Deckel erreicht ist. Der Deckel begrenzt damit Arbeit und
  Speicher, nicht mehr nur die Antwortlänge.
- Der Gleichheitstest sieht jetzt etwas: drei lesbare Dokumente mit
  unterschiedlicher Nähe zur Frage plus das nicht lesbare, Vergleich der
  Dokumentfolge und zusätzlich der Passagenmenge (Dokument-ID + Chunk-Nummer).
- SearchDependencyStructureTest hält die Invariante aus ADR-0035 §5
  maschinell: io.opaa.search referenziert weder vector_store noch
  io.opaa.query.retrieval/answer/citation. Der Prompt-Marker-Test bleibt als
  Ergänzung. SearchService bezieht die Namen der durchsuchten Bibliotheken
  dafür selbst, statt über ChatSourceAssembler.
- Die Alarmmeldung bleibt lesbar, aber nur kurz: ExternalAccessAlertRetention
  löscht sie nach 14 Tagen, und sie trägt nur Token-Kennung und Zeitfenster,
  nicht den Messwert. external-access.md und das Handbuch sagen es.
- GET /api/v1/search/libraries liefert die Bibliotheken des
  SearchRequestScope — der Umfangspunkt „Auflisten" aus #1720, an derselben
  Naht wie Suche und Abruf.
- truncated gilt für beide Abrufarten; die Absolutaussage ist aus Record und
  Spezifikation gestrichen.
- downloadUrl wird in der Domäne gegen den Scope entschieden, nicht im Mapper
  aus dem Vorhandensein einer Dokument-ID abgeleitet.
- Kontingent und Alarm sind mit gesetzter Token-Kennung getestet
  (PassageFetchServiceTest, SearchServiceQuotaWiringTest), der Alarm-Test
  belegt die kanalweite Zählung mit vier Tokens, die Protokollzählung ist auf
  eigene Objekt-IDs eingegrenzt, und der Deckel schneidet kein Surrogatpaar.

Co-Authored-By: Claude Opus 5 (1M con